kubernetes/talos/deploy/zigbee/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
