kubernetes/talos/deploy/zigbee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
      release: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
        release: zigbee2mqtt
    spec:
      automountServiceAccountToken: false
      containers:
      - image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        name: zigbee2mqtt
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: config
        - mountPath: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_fa3c3d9a9829ec1194ba6d7840c9ce8d-if00-port0
          name: dongle
        securityContext:
          privileged: true
          allowPrivilegeEscalation: false
        # --- Probes ---
        readinessProbe:
          failureThreshold: 6
          successThreshold: 1
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            scheme: HTTP
            port: 8080
            path: /#/
        livenessProbe:
          failureThreshold: 6
          successThreshold: 1
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 5
          tcpSocket:
            port: 8080
        # ---------------
      restartPolicy: Always
      nodeName: kube101
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: zigbee2mqtt
      - name: dongle
        hostPath:
          path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_fa3c3d9a9829ec1194ba6d7840c9ce8d-if00-port0
